worked on shift type popup dates are stored in local storage (Fixes #9)

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -109,7 +109,8 @@ h2 {
 }
 
 .cell {
-	display: table-cell;    
+	display: table-cell;
+	padding: 2px 5px;    
 }
 
 
